--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Oswald", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Oswald', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1;
   font-weight: 400;
   box-sizing: border-box;
@@ -23,7 +23,14 @@
   padding: 0 24px;
 }
 
-h1,
+ul {
+  list-style: none;
+}
+
+h1 {
+  margin: 48px 0;
+}
+
 h2,
 h3,
 h4,
